# aura-voice

./: .coverage  .env.template  .gitignore  .releaserc.json  README.md  check_audio.py  download_model.py  main.py  package-lock.json  package.json  pyproject.toml  test_clone.py  trim_audio.py  tts.py  tts_direct.py  tts_patched.py  tts_server.py  ui_gradio.py  verify_bundle.py  verify_clone.py
.github/: semantic-release-trigger.txt
.github/workflows/: release.yml  semantic-release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/distribution_20260127/: metadata.json  plan.md  spec.md
conductor/archive/infrastructure_20260127/: metadata.json  plan.md
conductor/tracks/distribution_20260127/: index.md  plan.md
conductor/tracks/infrastructure_20260127/: index.md  plan.md  spec.md
conductor/tracks/model-download-onboarding_20260129/: metadata.json  plan.md  spec.md
menubar-tts/: electron-builder.json5  entitlements.mac.plist  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
menubar-tts/electron/: electron-env.d.ts  main.ts  notarize.cjs  preload.ts
menubar-tts/electron/__tests__/: preload.test.ts
menubar-tts/electron/ipc/: registerModelDownloadIpc.ts
menubar-tts/electron/services/: ModelDownloadService.ts  PythonService.ts  TtsService.ts  VoiceService.ts
menubar-tts/src/: App.tsx  index.css  vite-env.d.ts
menubar-tts/src/__tests__/: App.test.tsx
menubar-tts/src/components/: DownloadStatusLine.tsx  (+4 more)
tests/: test_mlx_integration.py  test_tts_server.py
(+11 files in other folders)
