[project]
name = "readmethis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "huggingface-hub[hf-xet]>=0.36.0",
    "mlx-audio>=0.3.0",
    "mlx-lm>=0.29.1",
    "scipy>=1.17.0",
    "sounddevice==0.5.3",
    "soundfile>=0.13.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=term-missing"
env = [
    "HF_HUB_OFFLINE=1",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "setup.py",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
]
